--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,9 @@
   <build_depend>rospy</build_depend>
   <run_depend>rospy</run_depend>
 
+<build_depend>roscpp</build_depend>
+  <run_depend>roscpp</run_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
   </export>
