Path Planner with Psm Bridge

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,14 +44,15 @@ set(SRC_FILES
 		src/Psm.cpp
 		src/Cooperative.cpp
 		src/force_main.cpp
-        src/path_planner.cpp)
+        src/path_planner.cpp src/psm_coop/psm_sub.cpp)
 set(HDR_FILES
 		include/psm_coop/Interpolate.h
 		include/psm_coop/force_control.h
 		include/psm_coop/Psm.h
 		include/psm_coop/Cooperative.h
 		include/psm_coop/DataType.h
-		include/psm_coop/path_planner.h)
+		include/psm_coop/path_planner.h
+		include/psm_coop/psm_sub.h)
 
 add_library(psm_coop  ${SRC_FILES} ${HDR_FILES})
 target_link_libraries(psm_coop ${catkin_LIBRARIES})
